--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     async function main() {
       try {
-        await liff.init({ liffId: "YOUR_LIFF_ID" }); // ใส่ LIFF ID ที่นี่
+        await liff.init({ liffId: "2007543218-b07oMAA3" }); // ใส่ LIFF ID ที่นี่
         if (!liff.isLoggedIn()) {
           liff.login();
         } else {
